# internal/api/docs/api_swagger.json
@@ -246,7 +246,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Group"
+                            "$ref": "#/definitions/schemas.GroupsCreateRequest"
                         }
                     }
                 ],
@@ -1008,15 +1008,6 @@
         "models.Access": {
             "type": "object",
             "properties": {
-                "groupId": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "projectId": {
-                    "type": "integer"
-                },
                 "role": {
                     "type": "string"
                 },
@@ -1174,6 +1165,22 @@
                 }
             }
         },
+        "schemas.AccessMember": {
+            "type": "object",
+            "properties": {
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "admin",
+                        "member"
+                    ]
+                },
+                "userId": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
         "schemas.AuthConfirmation": {
             "type": "object",
             "required": [
@@ -1267,6 +1274,20 @@
             "properties": {
                 "message": {},
                 "validationErrors": {}
+            }
+        },
+        "schemas.GroupsCreateRequest": {
+            "type": "object",
+            "properties": {
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.AccessMember"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
             }
         },
         "schemas.GroupsListResponse": {
