# internal/api/schemas/groups.go
@@ -6,3 +6,13 @@ type GroupsListResponse struct {
 	TotalCount int            `json:"totalCount"`
 	Items      []models.Group `json:"items"`
 }
+
+type AccessMember struct {
+	UserID int64  `json:"userId" example:"1"`
+	Role   string `json:"role" enums:"admin,member"`
+}
+
+type GroupsCreateRequest struct {
+	Name    string         `json:"name"`
+	Members []AccessMember `json:"members"`
+}
